--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,72 +1,10 @@
 
 @import "reset.css";
-@import "status-bar.css";
+@import "components/status-bar.css";
 @import "variables.css";
+@import "screens/login.css";
 
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-.welcome-header{
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-weight: 600;
-}
-
-.welcome-header_title{
-    margin-bottom: 30px;
-    font-size: 25px;
-}
-
-.welcome-header_text{
-    width: 60%;
-    opacity: 0.7;
-    font-size: 15px;
-}
-
-
-#login-form{
-    display: flex;
-    flex-direction: column;
-    margin: 0px 40px;
-}
-
-#login-form input{
-    border: none;
-    padding: 15px 0px;
-    font-size: 18px;
-    margin-bottom: 25px;
-    
-}
-
-#login-form input:not([type="submit"]) {
-    transition: border-color 0.3s ease-in-out;
-    border-bottom: 1.4px solid rgba(0, 0, 0, 0.2);
-}
-
-#login-form input::placeholder{
-    color: rgba(0, 0, 0, 0.4);
-}
-
-
-#login-form input:focus{
-    border-color: var(--yellow)
-}
-
-#login-form input[type="submit"]{
-    background-color: var(--yellow);
-    cursor: pointer;
-    padding: 20px 0px;
-    border-radius: 5px;
-
-}
-
-#login-form a{
-    text-align: center;
-    text-decoration: none;
-    color: inherit;
-    font-size: 14px;
-}
