--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,16 @@
-
 @import "reset.css";
 @import "components/status-bar.css";
 @import "variables.css";
 @import "screens/login.css";
+@import "components/nav-var.css";
+@import "components/screen-header.css";
+@import "screens/friends.css";
+@import "components/user-component.css";
 
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+body {
+  color: #2e363e;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  height: 1000vh;
 }
-
