--- a/CSS/components/status-bar.css
+++ b/CSS/components/status-bar.css
@@ -5,7 +5,7 @@
   padding: 10px 10px;
   font-weight: 600;
   font-size: 15px;
-  background-color: rgba(128, 128, 128, 0.171);
+  background-color: rgb(238, 238, 238);
 }
 
 .status-bar__column {
