--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -4,9 +4,14 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 #friends-display-link i {
   color: rgba(0, 0, 0, 0.3);
   justify-content: center;
+}
+
+.friend-screen {
+  padding: 0px var(--horizontal-space);
 }
