--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -3,7 +3,7 @@
 }
 
 .user-component,
-.usercomponent_column:first-child {
+.user-component_column:first-child {
   display: flex;
   align-items: center;
 }
@@ -21,7 +21,8 @@
 
 .user-component_subtitle {
   margin-top: 8px;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.3);
+  font-weight: 500;
 }
 
 .user-component_avatar--xl {
@@ -35,9 +36,7 @@
   border-radius: 25px;
 }
 
-.user-component_title--not-bold {
-  font-weight: 400;
-}
+
 
 .friends-screen_chennel {
   margin-top: 25px;
@@ -52,6 +51,20 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
+.user-component_title--not-bold {
+  font-weight: 400;
+}
+
 .user-component_column:last-child {
   color: rgba(0, 0, 0, 0.5);
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 15px;
+}
+
+.user-component_time{
+  margin-bottom: 10px;
+  display: block;
 }
