--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,14 +3,21 @@
 @import "variables.css";
 @import "screens/login.css";
 @import "components/nav-var.css";
+@import "components/badge.css";
 @import "components/screen-header.css";
 @import "screens/friends.css";
 @import "components/user-component.css";
+@import "screens/find.css";
+
 
 body {
   color: #2e363e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-  height: 200vh;
+  height: 120vh;
+}
+
+.main-screens{
+  padding: 0px var(--horizontal-space);
 }
