--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,8 @@
 @import "screens/friends.css";
 @import "components/user-component.css";
 @import "screens/find.css";
-
+@import "screens/more.css";
+@import "components/component-icons.css";
 
 body {
   color: #2e363e;
